<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Evo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_back">Back</string>
    <string name="title_activity_icon_preference_screen">IconPreferenceScreen</string>
    <string name="wifi">WIFI Settings</string>
    <string name="lockscreen">Lockscreen Settings</string>
    <string name="title_activity_user_interface">UI Settings</string>
    <string name="edt">EDT Tweaks</string>
    <string name="battery">Battery Bar Settings</string>
    <string name="title_activity_utility">Utilities</string>
    <string name="states">CPU States</string>
    <string name="cpu">CPU Settings</string>
    <string name="title_activity_about">About</string>
    <string name="app">Evo Modificazione App</string>
    <string name="app_info">App version - 1.0</string>
    <string name="rom_thread">Official Rom Thread</string>
    <string name="theme_thread">Official Themes Thread</string>
    <string name="forum">forum.xda-developers.com</string>
    <string name="logcat">Take Logcat</string>
    <string name="terminal">Terminal Emulator</string>
    <string name="quickpanel">Quickpanel Settings</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="summary_off">Summary off</string>
    <string name="summary_on">Summary on</string>
    <string name="title_activity_notification_panel">NotificationPanel</string>
    <string name="ui_general">GENERAL</string>
    <string name="status_bar">STATUS BAR</string>
    <string name="clock">CLOCK</string>
    <string name="panel_bg">PULLDOWN BACKGROUND</string>
    <string name="battery_visible">Battery visible</string>
    <string name="battery_hidden">Battery hidden</string>
    <string name="battery">BATTERY</string>
    <string name="battery_bar">Battery Bar</string>
    <string name="title_activity_status_bar">StatusBar</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="change_pic">Change profile picture</string>
    <string name="profile_pic">SET PROFILE PICTURE</string>
    <string name="profile_name">CHANGE PROFILE NAME</string>
    <string name="clock_hide">Clock hidden</string>
    <string name="clock_unhide">Clock visible</string>
    <string name="notif_summary">Configure notification panel elements, background color.</string>
    <string name="status_summary">Statusbar color and other elements</string>
    <string name="date">DATE VIEW</string>
    <string name="day_hide">Day hidden</string>
    <string name="day_unhide">Day visible</string>
    <string name="title_activity_quick_settings">QuickSettings</string>
    <string name="toggle">QUICKSETTINGS TOGGLE</string>
    <string name="about_summary">App version,official thread.</string>
    <string name="ui_summary">Configure ui elements.Lets you hide or unhide and change colors of elements.</string>
    <string name="tools_summary">Essential utilities for phone management</string>
    <string name="quicksettings_summary">Pick the statusbar quicksettings toggle color</string>
    <string name="user_summary">Set quicksettings profile picture and name</string> 
    <string name="ls_summary">Choose lockscreen settings</string>
    <string name="phab">Normal View</string>
    <string name="tab">Tablet View</string>
    <string name="layout">Status Bar Layout</string>  
    <string name="layout_summary">Change statusbar layout</string>
    <string name="rom_name">Evolution-X</string>                  

</resources>