<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="143.0dp"
    android:background="@drawable/about_bg">
<TextView android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center" android:textSize="35.0sp"
    android:textColor="#ffffffff" android:text="@string/rom_name"
    android:layout_gravity="center_vertical"/>    
</LinearLayout> 
<ImageView android:layout_width="fill_parent" android:layout_height="1.0dip" android:background="#ff33b5e5" />   
<LinearLayout 
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:layout_marginTop="15.0dip"
android:layout_marginLeft="5.0dip"
android:layout_marginRight="5.0dip"
android:background="@drawable/cards_bg"
android:orientation="vertical">
<LinearLayout 
android:layout_width="fill_parent"
android:layout_height="0.0dp"
android:layout_marginLeft="10.0dip"
android:layout_marginRight="10.0dip"
android:orientation="horizontal"
android:layout_weight="1.0">
	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/about" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:gravity="left" android:textColor="#ff33b5e5" android:textSize="16.0sp" android:text="@string/app_info" android:layout_weight="1.0" />
</LinearLayout>
<ImageView android:layout_width="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_height="0.5dip" android:background="#ffd0d0d0" android:layout_weight="1.0" />
<LinearLayout 
android:layout_width="fill_parent"
android:layout_height="0.0dp"
android:background="@drawable/list_selector_holo_dark"
android:layout_marginLeft="10.0dip"
android:layout_marginRight="10.0dip"
android:orientation="horizontal"
android:layout_weight="1.0"
android:id="@+id/rom">
	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/rom" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:gravity="left" android:textColor="#ff33b5e5" android:textSize="16.0sp" android:text="@string/rom_thread" android:layout_weight="1.0" />
</LinearLayout>
<ImageView android:layout_width="fill_parent" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_height="0.5dip" android:background="#ffd0d0d0" android:layout_weight="1.0" />
<LinearLayout 
android:layout_width="fill_parent"
android:layout_height="0.0dp"
android:background="@drawable/list_selector_holo_dark"
android:layout_marginLeft="10.0dip"
android:layout_marginRight="10.0dip"
android:orientation="horizontal"
android:layout_weight="1.0"
android:id="@+id/theme">
	<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:background="@drawable/theme" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_vertical" android:gravity="left" android:textColor="#ff33b5e5" android:textSize="16.0sp" android:text="@string/theme_thread" android:layout_weight="1.0" />
</LinearLayout>   
</LinearLayout>
</LinearLayout>